feat: 애피소드 테이블 중복 데이터 제거